--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -3,20 +3,42 @@
     <h3 class="text-align-center"> Login </h3>
   </div>
   <div class="container d-flex flex-column mt-2 align-items-center">
-    <form action="" class="w-50" method="post" (ngSubmit)="login()">
+    <form action="" class="w-50" method="post" (ngSubmit)="login()" #loginForm = 'ngForm'>
       <div class="form-group mb-2">
-        <input type="text" class="form-control" name="usuario" placeholder="usuario"
-          [(ngModel)]="usuario"
-          name="usuario"
+        <input
+        type="text"
+        class="form-control"
+        name="usuario"
+        placeholder="usuario"
+        [(ngModel)]="usuario"
+        name="usuario"
+        #campoUsuario = 'ngModel'
+        required
         >
+        <app-mensagem
+        *ngIf="campoUsuario.invalid && campoUsuario.touched"
+        mensagem="O campo deve ser preenchido"
+          ></app-mensagem>
       </div>
+
       <div class="form-group mb-2">
-        <input type="password" class="form-control" name="senha" placeholder="senha"
-        [(ngModel)]="senha" name="senha"
+        <input
+          type="password"
+          class="form-control"
+          name="senha"
+          placeholder="senha"
+          [(ngModel)]="senha"
+          name="senha"
+          required
+          #campoSenha = 'ngModel'
         />
+        <app-mensagem
+          *ngIf="campoSenha.invalid && campoSenha.touched"
+          mensagem="O campo deve ser preenchido"
+        ></app-mensagem>
       </div>
       <div class="form-group">
-        <input type="submit" class="form-control bg-info" name="senha" placeholder="senha">
+        <input type="submit" class="form-control bg-info" name="senha" placeholder="senha" [disabled]="loginForm.invalid">
       </div>
     </form>
   </div>
